# STM32_template

./: CMakeLists.txt  arm-none-eabi-gcc.cmake  readme.md
device/: LinkerScript.ld  startup.S
src/: main.c  version.h.in
